--- a/key.env
+++ b/key.env
@@ -1,1 +1,1 @@
-db_conn_link=postgres://guest_user:ZTq9PML66VsxvlKBOTypH5bswVY8Ts8T@dpg-co0a1q779t8c73d99h60-a.oregon-postgres.render.com/book_notes_nsdb
+db_conn_link=postgresql://guest_user:jm0MPPEopfV4IQXn2R0DB7aJXuwDEfYc@dpg-cpsn2dl6l47c73e98d7g-a.oregon-postgres.render.com/book_notes_nsdb_8l2h
