--- a/key.env
+++ b/key.env
@@ -1,1 +1,4 @@
-db_conn_link=postgresql://guest_user:k84dMKgfyzlpST0lbOWdPKVBoVnBt6pK@dpg-cqhr9gpu0jms73bb1ns0-a/book_notes_c8hg
+db_conn_link=postgresql://guest_user:k84dMKgfyzlpST0lbOWdPKVBoVnBt6pK@dpg-cqhr9gpu0jms73bb1ns0-a.oregon-postgres.render.com/book_notes_c8hg
+
+//this is the external key from Render Database
+
