--- a/key.env
+++ b/key.env
@@ -1,4 +1,4 @@
-db_conn_link=postgresql://guest_user:jis2u6ttM7662w4e2u09VPdpfDNsHYSk@dpg-cropegpu0jms73cdigmg-a.oregon-postgres.render.com/book_notes_0w0a
+db_conn_link=postgresql://guest_user:u9NBG0PsZaGOApGh1nDpVaXVV9Z48rs1@dpg-cscjl3lsvqrc73fut3n0-a.oregon-postgres.render.com/book_notes_xhxd
 
 //this is the external key from Render Database
 
