--- a/key.env
+++ b/key.env
@@ -1,4 +1,4 @@
-db_conn_link=postgresql://guest_user:u9NBG0PsZaGOApGh1nDpVaXVV9Z48rs1@dpg-cscjl3lsvqrc73fut3n0-a.oregon-postgres.render.com/book_notes_xhxd
+db_conn_link=postgresql://guest_user:vMz7W2kV9O7WVW3ftAlGdC9d87F5E7iV@dpg-ct0dog52ng1s73b9j49g-a.oregon-postgres.render.com/book_notes_lanw
 
 //this is the external key from Render Database
 
