--- a/key.env
+++ b/key.env
@@ -1,4 +1,4 @@
-db_conn_link=postgresql://guest_user:vMz7W2kV9O7WVW3ftAlGdC9d87F5E7iV@dpg-ct0dog52ng1s73b9j49g-a.oregon-postgres.render.com/book_notes_lanw
+db_conn_link=postgresql://guest_user:kcRQMicH3AsdryQgJ3pSRHqBhKWg1NbZ@dpg-ctsqd5popnds73c7movg-a.oregon-postgres.render.com/book_notes_v2r4
 
 //this is the external key from Render Database
 
