--- a/key.env
+++ b/key.env
@@ -1,4 +1,4 @@
-db_conn_link=postgresql://guest_user:12z7jUCR0M1o42eSaqMF5c6kJWdfUfR3@dpg-cv4vglan91rc73be0h7g-a.oregon-postgres.render.com/book_notes_84bt
+db_conn_link=postgresql://guest_user:B6wiROB0oZ6v3wwe2IFoIPz5kCFDbgld@dpg-cvopgfh5pdvs73a37gbg-a.oregon-postgres.render.com/book_notes_j40d
 
 //this is the external key from Render Database
 
