--- a/key.env
+++ b/key.env
@@ -1,4 +1,4 @@
-db_conn_link=postgresql://guest_user:B6wiROB0oZ6v3wwe2IFoIPz5kCFDbgld@dpg-cvopgfh5pdvs73a37gbg-a.oregon-postgres.render.com/book_notes_j40d
+db_conn_link=postgresql://guest_user:gVwYTAgj2zXLxx0WprWfkXdgHqULb8RH@dpg-d0cjen15pdvs73a46cng-a.oregon-postgres.render.com/book_notes_py9b
 
 //this is the external key from Render Database
 
